--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,9 @@
 server {
-        listen   80;
-
-        root {{ document_root }}/{{ app_root }};
-        index index.html index.html;
-        server_name {{ server_name }};
-
-
-        location / {
-                default_type "text/html";
-		try_files $uri.html $uri $uri/ =404;
-        }
-
+  listen 80;
+  listen [::]:80;
+  server_name _;
+  root /var/www/myhtml;
+  location / {
+    try_files $uri $uri/ =404;
+  }
 }
